# OWBalancer

./: CMakeLists.txt  gameBalance.c  gameBalance.h  main.c
classes/: array.c  balance.c  player.c  role.c
classes_header/: array.h  balance.h  const.h  player.h  role.h
